# FlowMuse

./: .gitattributes  .gitignore  .gitlab-ci.yml  .metadata  AGENTS.md  README.md  REQUIREMENTS.md  flutter_bootstrap.js  index.html  pubspec.yaml  version.json
.agent/: ai_usage.md  architecture.md  conventions.md  decisions.md  forbidden_zones.md
.github/workflows/: quality.yml
FlowMuse-App/: .env  README.md  analysis_options.yaml  pubspec.yaml
FlowMuse-App/docs/: api.md  architecture.md  data-model.md
FlowMuse-App/lib/: main.dart
FlowMuse-App/linux/: CMakeLists.txt
FlowMuse-App/ohos/: .gitignore  build-profile.json5  oh-package.json5
FlowMuse-App/ohos/entry/src/main/cpp/: CMakeLists.txt  harmony_sqlite_loader.c
FlowMuse-App/test/: widget_test.dart
FlowMuse-App/web/: index.html  manifest.json  sqflite_sw.js
FlowMuse-App/windows/: CMakeLists.txt
FlowMuse-Server/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
assets/: AssetManifest.bin.json  FontManifest.json  NOTICES
assets/shaders/: pencil.frag
canvaskit/: skwasm.js.symbols  skwasm.wasm  skwasm_heavy.js.symbols  wimp.js.symbols  wimp.wasm
docs/: HarmonyOS_UI.md  collaboration_four_device_deployment.md  flutter_ui_lifecycle_assertions.md  speech-to-text-spec.md  鸿蒙沉浸光感UI设计实现指南.md
docs/acceptance/: sprint2-ai-reflection-log.md
docs/research/: 2026-07-11-harmonyos-feature-integration-research.md  claude-research.md  codex-best.md  codex-research.md  speech-to-text-capability-baseline.md  (+1 more)
lib/: main.dart
test/: widget_test.dart
周报/: 任逸青实操第一周周报.md  陈宏宇实操第一周周报.md
(+588 files in other folders)
